# linear_algebra_for_data_science

./: README.md  pyproject.toml
notebooks/: linear_algebra_practical.ipynb
