[tool.poetry]
name = "linear-algebra-for-data-science"
version = "0.1.0"
description = "Jupyter notebooks demonstrating key Linear Algebra concepts applied to Data Science and Machine Learning."
authors = ["Renato F Pereira <orenatobr@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.11.8"
numpy = "^1.24.0"       # Essential for matrix operations
scipy = "^1.10.0"       # Advanced linear algebra functions
matplotlib = "^3.7.0"   # Data visualization
pandas = "^1.5.3"       # Data handling and analysis
scikit-learn = "^1.2.0" # PCA and ML applications
jupyter = "^1.0.0"      # Running Jupyter notebooks

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.0" # Enhanced notebook interface
black = "^23.1.0"     # Code formatting
isort = "^5.11.0"     # Import sorting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
